add full url name.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section class="bg">
-       <h1>Visit my portfolio at <br /> <a href="https://annietaylorchen.com">Annie Taylor Chen</a></h1>
+       <h1>Visit my portfolio at <br /> <a href="https://www.annietaylorchen.com">Annie Taylor Chen</a></h1>
     </section>   
 </body>
 </html>
